# stocpreg

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  corpus_stats.sh  extract-pairs.sh  frameelem.cpp  frameelem.h  framestring.cpp  framestring.h  lexicon.h  main-parser.cpp  parser.cpp  parser.h  pregroup.cpp  pregroup.h  type-to-word-count.py  types.sh  typeset
include/: ccg.h  frameelem.h  framestring.h  group.h  groupparser.h  grouppregroup.h  learning.h  lexicon.h  lexiconentry.h  monoidalgrammar.h  morphism.h  parser.h  pregroup.h  pregroupccg.h  pregroupparser.h
src/: Makefile.am  ccg.cpp  frameelem.cpp  framestring.cpp  group.cpp  groupparser.cpp  grouppregroup.cpp  learning.cpp  lexicon.cpp  main-ccgbank.cpp  main-learner.cpp  main-morphism.cpp  main-parser.cpp  parser.cpp  pregroup.cpp  pregroupccg.cpp  pregroupparser.cpp
statistics/: types.sh
wittgenstein/: cleaned-de  cleaned-en  first-tractatus  small-en  verysmall-en
